# aloevera

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.ci/: general-jobs  release.yml  windows-release.yml
.hooks/: pre-commit
docs/: ex_001.md  ex_002.md  ex_003.md  ex_004.md  ex_005.md  ex_006.md  ex_007.md  readme.md
proj/: Cargo.toml
proj/src/: error.rs  lib.rs  project.rs
samples/: Makefile.vars  readme.md
samples/binfiles/: Makefile  binfiles.bas  binfiles.s
samples/bitmap/: Makefile  bitmap.s
samples/common/: Makefile  header.inc  macros.inc  x16_config.cfg
samples/palette/: Makefile  poke_palette.bas  poke_palette.s
samples/scratch/: Makefile  scratch.bas  scratch.s
samples/sd_card/: Makefile  sd_card.bas
samples/sprites/: Makefile  sprites.bas  sprites.s
samples/tile_text/: Makefile  poke_font.bas  tile_text.bas  tile_text.s
samples/tile_wall/: Makefile  tile_wall.bas  tile_wall.s
src/: error.rs  lib.rs
src/cmd/: common.rs  execute.rs  mod.rs
src/cmd/asm/: command.rs  parse.rs
src/cmd/bitmap/: command.rs  parse.rs
src/cmd/create/: command.rs  parse.rs
src/cmd/imageset/: command.rs  parse.rs
src/cmd/list/: command.rs  mod.rs  parse.rs
src/cmd/palette/: command.rs  parse.rs
src/cmd/project/: command.rs  parse.rs
src/cmd/sprite/: command.rs  parse.rs
src/cmd/tilemap/: command.rs  parse.rs
tests/: cmd_line_basic.rs  palette.rs
tests/common/: mod.rs
tests/data/ref/: imageset-4bpp-pal.ca65  imageset-4bpp-pal.cc65
util/: Cargo.toml
util/src/: fat.rs  gpl.rs  hex.rs  lib.rs  logger.rs
util/src/data/: create.sh  dir2fat32.sh
util/src/data/contents/: CREATED_BY_ALOEVERA
vera/: Cargo.toml
vera/src/: asm.rs  bitmap.rs  error.rs  imageset.rs  lib.rs  palette.rs  png_util.rs  sprite.rs  tilemap.rs
vera/tests/: bitmap.rs  imageset.rs  palette.rs  sprite.rs  tilemap.rs
vera/tests/data/palette/: palette-gimp.gpl
