[package]
name = "aloevera"
version = "0.1.0"
authors = ["Revcore Technologies Ltd."]
description = "Graphics Asset Pipeline for the Commander X16"
license = "Apache-2.0"
keywords = [ "x16" ]
readme = "README.md"
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["util", "vera", "proj"]

[[bin]]
name = "aloevera"
path = "src/bin/aloevera.rs"

[build-dependencies]
built = "0.4"

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
log = "0.4"
failure = "0.1"
failure_derive = "0.1"

aloevera_util = { path = "./util", version = "0.1.0" }
aloevera_proj = { path = "./proj", version = "0.1.0" }
aloevera_vera = { path = "./vera", version = "0.1.0" }
