[package]
name = "aloevera_proj"
version = "0.1.0"
authors = ["Revcore Technologies Ltd."]
description = "Aloevera project file definitions"
license = "Apache-2.0"
keywords = [ "x16" ]
workspace = ".."
edition = "2018"

[dependencies]
backtrace = "0.3"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
failure = "0.1"
failure_derive = "0.1"

aloevera_util = { path = "../util", version = "0.1.0" }
aloevera_vera = { path = "../vera", version = "0.1.0" }
