[package]
name = "aloevera_util"
version = "0.1.0"
authors = ["Revcore Technologies Ltd."]
description = "Aloevera utils crate."
license = "Apache-2.0"
keywords = [ "x16" ]
workspace = ".."
edition = "2018"

[dependencies]
backtrace = "0.3"
lazy_static = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
walkdir = "2"
zip = { version = "0.5", default-features = false }
parking_lot = {version = "0.6"}

