[package]
name = "aloevera_vera"
version = "0.0.1-alpha.1"
authors = ["Revcore Technologies Ltd."]
description = "Aloevera VERA operations"
license = "Apache-2.0"
keywords = [ "x16" ]
workspace = ".."
edition = "2018"

[dependencies]
log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
failure = "0.1"
failure_derive = "0.1"
serde = "1"
serde_derive = "1"
png = "0.15"
permutate = "0.3"

aloevera_util = { path = "../util", version = "0.0.1-alpha.1" }
